--- a/css/style.scss
+++ b/css/style.scss
@@ -263,33 +263,75 @@ strong{
 	
 
 	z-index: 15;
-	.article-item{
+	
+}
+.article-item{
+	color: #51718e;
+	width: 100%;
+	max-width: 290px;
+	margin: 0 auto;
+	&__imgbox{
+		margin-bottom: 30px;
+		img{
+			width: 100%;
+			height: auto;
+		}
+	}
+	&__date{
+		font-size: 14px;
+		margin-bottom: 15px;
+	}
+	&__title{
+		color: #374f63;
+		font-size: 18px;
+		line-height: 36px;
+		font-weight: 700;
+		text-transform: uppercase;
+		margin-bottom: 10px;
+		letter-spacing: 0.015em;
+	}
+	&__desc{
+		
+		letter-spacing: 0.015em;
+		margin-bottom: 10px;
+	}
+	&__more{
+		text-decoration: none;
 		color: #51718e;
-		&__date{
-			font-size: 14px;
-			margin-bottom: 15px;
-		}
-		&__title{
-			color: #374f63;
-			font-size: 18px;
-			line-height: 36px;
-			font-weight: 700;
-			text-transform: uppercase;
-			margin-bottom: 10px;
-			letter-spacing: 0.015em;
-		}
-		&__desc{
-			
-			letter-spacing: 0.015em;
-			margin-bottom: 10px;
-		}
-		&__more{
-			text-decoration: none;
-			color: #51718e;
-			text-transform: uppercase;
-			letter-spacing: 0.15em;
-			
-		}
+		text-transform: uppercase;
+		letter-spacing: 0.15em;
+		
+	}
+}
+.news-articles{
+	position: relative;
+	width: 100%;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	.article-item{
+		margin-bottom: 50px;
+	}
+}
+.pagination{
+	text-align: center;
+	margin-bottom: 20px;
+}
+.nav-links{
+	color: #51718e;
+	font-size: 24px;
+	//letter-spacing: 0.2em;
+	font-weight: 500;
+	a{
+		color: #51718e;
+	}
+	.page-numbers{
+		margin-right: 40px;
+	}
+	.page-numbers:last-child{
+		margin-right: 0px;
+	}
+	.current{
+		color: #384e63;
 	}
 }
 .contacts-block{
