--- a/css/style2.css
+++ b/css/style2.css
@@ -539,6 +539,7 @@
   display: block;
   width: 48px;
   height: 90px;
+  cursor: pointer;
   position: absolute;
   top: 50%;
   -webkit-transform: translate(0, -50%);
@@ -793,10 +794,25 @@
   background-size: cover; }
   @media all and (max-width: 1330px) {
     .modal-close-btn {
-      width: 21px;
-      height: 20px;
-      right: -30px;
-      top: 10px; } }
+      width: 26px;
+      height: 25px;
+      right: -35px;
+      top: 0px; } }
+  @media all and (max-width: 992px) {
+    .modal-close-btn {
+      right: 10px;
+      top: 10px;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      background-size: 26px 25px;
+      background-position: 50% 50%;
+      width: 36px;
+      height: 35px; } }
+  @media all and (max-width: 480px) {
+    .modal-close-btn {
+      background-size: 16px 15px;
+      width: 26px;
+      height: 25px; } }
 
 /* Price */
 .price::after {
@@ -1031,3 +1047,27 @@
       -webkit-flex-basis: 100%;
           -ms-flex-preferred-size: 100%;
               flex-basis: 100%; } }
+
+.gallery-left {
+  left: -205px; }
+  @media all and (max-width: 1330px) {
+    .gallery-left {
+      left: -115px; } }
+  @media all and (max-width: 992px) {
+    .gallery-left {
+      left: 25px; } }
+  @media all and (max-width: 480px) {
+    .gallery-left {
+      left: 15px; } }
+
+.gallery-right {
+  right: -215px; }
+  @media all and (max-width: 1330px) {
+    .gallery-right {
+      right: -105px; } }
+  @media all and (max-width: 992px) {
+    .gallery-right {
+      right: 25px; } }
+  @media all and (max-width: 480px) {
+    .gallery-right {
+      right: 15px; } }
