--- a/css/style2.scss
+++ b/css/style2.scss
@@ -853,25 +853,17 @@
     height: 35px;
     display: block;
     position: absolute;
-    top: 0;
-    right: -55px;
-    background: url('../img/modal-close.svg') 0 0 no-repeat;
+    top: 10px;
+    // right: -55px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.5) url('../img/modal-close.svg') 0 0 no-repeat;
     background-size: cover;
+    padding: 10px;
+    background-size: 26px 25px;
+    background-position: 50% 50%;
     @media all and (max-width: 1330px) {
-        width: 26px;
-        height: 25px;
-        right: -35px;
-        top: 0px;
-    }
-    @media all and (max-width: 992px) {
-        right: 10px;
-        top: 10px;
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 10px;
-        background-size: 26px 25px;
-        background-position: 50% 50%;
-        width: 36px;
-        height: 35px;
+        // right: -35px;
+        // top: 0px;
     }
     @media all and (max-width: 480px) {
         background-size: 16px 15px;
@@ -1123,27 +1115,29 @@
 }
 
 .gallery-left {
-    left: -205px;
-    @media all and (max-width: 1330px) {
-        left: -115px;
-    }
-    @media all and (max-width: 992px) {
-        left: 25px;
-    }
-    @media all and (max-width: 480px) {
-        left: 15px;
-    }
+    // left: -205px;
+    // @media all and (max-width: 1330px) {
+    //     left: -115px;
+    // }
+    // @media all and (max-width: 992px) {
+    //     left: 25px;
+    // }
+    // @media all and (max-width: 480px) {
+    //     left: 15px;
+    // }
+    left: 10px;
 }
 
 .gallery-right {
-    right: -215px;
-    @media all and (max-width: 1330px) {
-        right: -105px;
-    }
-    @media all and (max-width: 992px) {
-        right: 25px;
-    }
-    @media all and (max-width: 480px) {
-        right: 15px;
-    }
+    right: 10px;
+    // right: -215px;
+    // @media all and (max-width: 1330px) {
+    //     right: -105px;
+    // }
+    // @media all and (max-width: 992px) {
+    //     right: 25px;
+    // }
+    // @media all and (max-width: 480px) {
+    //     right: 15px;
+    // }
 }
