--- a/css/style2.css
+++ b/css/style2.css
@@ -788,26 +788,13 @@
   height: 35px;
   display: block;
   position: absolute;
-  top: 0;
-  right: -55px;
-  background: url("../img/modal-close.svg") 0 0 no-repeat;
-  background-size: cover; }
-  @media all and (max-width: 1330px) {
-    .modal-close-btn {
-      width: 26px;
-      height: 25px;
-      right: -35px;
-      top: 0px; } }
-  @media all and (max-width: 992px) {
-    .modal-close-btn {
-      right: 10px;
-      top: 10px;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 10px;
-      background-size: 26px 25px;
-      background-position: 50% 50%;
-      width: 36px;
-      height: 35px; } }
+  top: 10px;
+  right: 10px;
+  background: rgba(0, 0, 0, 0.5) url("../img/modal-close.svg") 0 0 no-repeat;
+  background-size: cover;
+  padding: 10px;
+  background-size: 26px 25px;
+  background-position: 50% 50%; }
   @media all and (max-width: 480px) {
     .modal-close-btn {
       background-size: 16px 15px;
@@ -1049,25 +1036,7 @@
               flex-basis: 100%; } }
 
 .gallery-left {
-  left: -205px; }
-  @media all and (max-width: 1330px) {
-    .gallery-left {
-      left: -115px; } }
-  @media all and (max-width: 992px) {
-    .gallery-left {
-      left: 25px; } }
-  @media all and (max-width: 480px) {
-    .gallery-left {
-      left: 15px; } }
+  left: 10px; }
 
 .gallery-right {
-  right: -215px; }
-  @media all and (max-width: 1330px) {
-    .gallery-right {
-      right: -105px; } }
-  @media all and (max-width: 992px) {
-    .gallery-right {
-      right: 25px; } }
-  @media all and (max-width: 480px) {
-    .gallery-right {
-      right: 15px; } }
+  right: 10px; }
