Вернул картинки fancybox

--- a/includes/content-photo.pug
+++ b/includes/content-photo.pug
@@ -37,13 +37,13 @@
         .photo-container
             .photo-gallery
                 .photo-gallery-img.photo-gallery-img__first
-                    a(href="img/offer-bg.png", data-fancybox="images", data-slide-class='custom-gallery').gallery-box
+                    a(href="img/gallery-img.jpg", data-fancybox="images").gallery-box
                         img(src="img/gallery-pic1.jpg", alt="Изображение 1")
                 .photo-gallery-img.photo-gallery-img__second
-                    a(href="img/vip-fish-bg.png", data-fancybox="images", data-slide-class='custom-gallery').gallery-box
+                    a(href="img/gallery-img.jpg", data-fancybox="images").gallery-box
                         img(src="img/gallery-pic2.jpg", alt="Изображение 2")
                 .photo-gallery-img.photo-gallery-img__third
-                    a(href="img/arrow-right-bg.jpg", data-fancybox="images", data-slide-class='custom-gallery').gallery-box
+                    a(href="img/gallery-img.jpg", data-fancybox="images").gallery-box
                         img(src="img/gallery-pic3.jpg", alt="Изображение 3")
                 .photo-gallery-img.photo-gallery-img__second
                     a(href="img/gallery-img.jpg", data-fancybox="images").gallery-box
