--- a/contacts.pug
+++ b/contacts.pug
@@ -1,6 +1,7 @@
 extends layout.pug
-block header
+block vars
 	- var title ="Контакты";
+block header
 	include includes/header.pug
 block content
 	include includes/content-contacts.pug
