--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -2,7 +2,9 @@
 	.container
 		.row
 			.col-lg-12
-				span facebook
+				.soc-block
+					a(href="#" class="soc_facebook") <i class="fa fa-facebook" aria-hidden="true"></i>
+					a(href="#" class="soc_youtube") <i class="fa fa-youtube-play" aria-hidden="true"></i>
 .toTop
 	i(class="fa fa-angle-up" aria-hidden="true")
 .modal-window#order
