--- a/includes/header.pug
+++ b/includes/header.pug
@@ -21,3 +21,28 @@
 						a(href="#") Фото
 					li
 						a(href="#") Контакты
+.mobile-menu-panel
+	input(type="checkbox" id="check_1" class="anz-mobile")
+	label(class="anz-menu-ch anz-mobile" for="check_1")
+		#nav-icon
+			span
+			span
+			span
+			span
+	.anz-perspective
+		.menu-list-pressed
+			ul.mobile-menu
+				li
+					a(href="#") VIP рыбалка
+				li
+					a(href="#") Услуги
+				li
+					a(href="#") Цены
+				li
+					a(href="#") Новости
+				li
+					a(href="#") Статьи
+				li
+					a(href="#") Фото
+				li
+					a(href="#") Контакты
