--- a/css/style.css
+++ b/css/style.css
@@ -91,61 +91,118 @@ strong {
 .main-menu {
   width: 100%;
   text-align: right; }
+  @media screen and (max-width: 1015px) {
+    .main-menu {
+      display: none; } }
   @media screen and (min-width: 960px) {
     .main-menu {
       padding-top: 63px; } }
   .main-menu li {
     display: inline-block;
     margin-right: 54px; }
+    @media screen and (min-width: 700px) {
+      .main-menu li {
+        margin-right: 30px; } }
+    @media screen and (min-width: 1200px) {
+      .main-menu li {
+        margin-right: 54px; } }
     .main-menu li a {
       color: #384f63;
       font-size: 24px;
       letter-spacing: 0.05em; }
+      @media screen and (min-width: 700px) {
+        .main-menu li a {
+          font-size: 20px; } }
+      @media screen and (min-width: 1200px) {
+        .main-menu li a {
+          font-size: 24px; } }
     .main-menu li:last-child {
       margin-right: 0px; }
 
+@media screen and (max-width: 1015px) {
+  .logo-box img {
+    max-width: 97px; } }
+
 .header {
   width: 100%;
-  height: 276px;
+  height: 135px;
   padding-top: 20px;
-  background: red;
-  background: url(../img/header.png) no-repeat top center;
+  background: #fff;
   z-index: 50;
   position: relative; }
+  @media screen and (min-width: 1015px) {
+    .header {
+      height: 276px;
+      background: url(../img/header.png) no-repeat top center; } }
+
+.header_fided {
+  top: 0px;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 500; }
+  @media screen and (max-width: 1015px) {
+    .header_fided {
+      -webkit-box-shadow: 0px 0px 4px 1px #CCC;
+              box-shadow: 0px 0px 4px 1px #CCC; } }
+  @media screen and (min-width: 1015px) {
+    .header_fided {
+      height: 276px;
+      background: url(../img/header.png) no-repeat top center; } }
+  .header_fided .logo-box {
+    margin-top: -15px; }
+  .header_fided .main-menu {
+    margin-top: -25px; }
 
 .header-block {
   background: url(../img/header2.png) no-repeat top center;
-  min-height: 1035px;
-  padding-top: 250px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   text-align: center;
   z-index: 40;
-  margin-top: -150px;
   opacity: 0.99;
   position: relative; }
+  @media screen and (min-width: 1015px) {
+    .header-block {
+      padding-top: 250px;
+      margin-top: -150px;
+      min-height: 1035px; } }
   .header-block h1.header-block_h1 {
-    font-size: 60px;
+    font-size: 40px;
+    line-height: 42px;
     letter-spacing: 0.05;
     color: #fff;
-    font-weight: 900;
-    line-height: 70px; }
+    font-weight: 900; }
+    @media screen and (min-width: 1015px) {
+      .header-block h1.header-block_h1 {
+        font-size: 60px;
+        line-height: 70px; } }
 
 .features-block {
   width: 100%;
-  min-height: 1050px;
   background: url(../img/features_bg.png) no-repeat top center;
-  margin-top: -220px;
-  padding-top: 300px;
   text-align: center;
   z-index: 30;
   color: #374f63;
-  padding-bottom: 150px; }
+  padding-top: 30px; }
+  @media screen and (min-width: 1015px) {
+    .features-block {
+      padding-bottom: 150px;
+      min-height: 1050px;
+      margin-top: -220px;
+      padding-top: 300px; } }
   .features-block__title {
     display: block;
-    font-size: 48px;
+    font-size: 35px;
+    line-height: 37px;
     text-transform: uppercase;
     letter-spacing: 0.025em;
     font-weight: 700;
-    margin-bottom: 35px; }
+    margin-bottom: 25px; }
+    @media screen and (min-width: 1015px) {
+      .features-block__title {
+        font-size: 48px;
+        margin-bottom: 35px; } }
   .features-block__description {
     font-size: 18px;
     font-weight: 500;
@@ -153,12 +210,19 @@ strong {
     letter-spacing: 0.025em;
     max-width: 850px;
     margin: 0 auto;
-    margin-bottom: 70px; }
-  .features-block .col-lg-4:nth-child(even) div.feature-item {
-    margin-top: -80px; }
+    margin-bottom: 70px;
+    text-align: left; }
+    @media screen and (min-width: 1015px) {
+      .features-block__description {
+        text-align: center; } }
+  @media screen and (min-width: 1015px) {
+    .features-block .col-lg-4:nth-child(even) div.feature-item {
+      margin-top: -80px; } }
   .features-block .feature-item {
     width: 100%;
-    max-width: 367px; }
+    max-width: 367px;
+    margin: 0 auto;
+    margin-bottom: 35px; }
     .features-block .feature-item__imgbox {
       margin-bottom: 35px; }
     .features-block .feature-item__title {
@@ -178,21 +242,28 @@ strong {
 
 .we-offer {
   width: 100%;
-  min-height: 790px;
-  background: url(../img/we_offer.png) no-repeat top center;
-  margin-top: -220px;
-  padding-top: 300px;
-  text-align: center;
+  padding-top: 30px;
   z-index: 30;
   position: relative;
   color: #374f63; }
+  @media screen and (min-width: 1015px) {
+    .we-offer {
+      margin-top: -220px;
+      padding-top: 300px;
+      min-height: 790px;
+      background: url(../img/we_offer.png) no-repeat top center; } }
   .we-offer__title {
     display: block;
-    font-size: 48px;
+    font-size: 35px;
+    line-height: 37px;
     text-transform: uppercase;
     letter-spacing: 0.025em;
     font-weight: 700;
-    margin-bottom: 35px; }
+    margin-bottom: 35px;
+    text-align: center; }
+    @media screen and (min-width: 1015px) {
+      .we-offer__title {
+        font-size: 48px; } }
   .we-offer__description {
     font-size: 18px;
     font-weight: 500;
@@ -201,24 +272,35 @@ strong {
     max-width: 850px;
     margin: 0 auto;
     margin-bottom: 70px; }
+    @media screen and (min-width: 1015px) {
+      .we-offer__description {
+        text-align: center; } }
 
 .home-service {
   position: relative;
   width: 100%;
-  min-height: 688px;
   background: url(../img/home_service.png) no-repeat top center;
-  margin-top: -220px;
-  padding-top: 250px;
   text-align: center;
   z-index: 20; }
+  @media screen and (max-width: 1015px) {
+    .home-service {
+      background-size: cover;
+      padding-top: 30px;
+      padding-bottom: 210px; } }
+  @media screen and (min-width: 1015px) {
+    .home-service {
+      min-height: 688px;
+      margin-top: -220px;
+      padding-top: 250px; } }
   .home-service .service-item {
     color: #fff;
     font-size: 26px;
     line-height: 34px;
     letter-spacing: 0.025em;
     font-weight: 900; }
-  .home-service .col-lg-3:first-child .service-item {
-    margin-top: -100px; }
+  @media screen and (min-width: 1015px) {
+    .home-service .col-lg-3:first-child .service-item {
+      margin-top: -100px; } }
   .home-service .col-lg-3:nth-child(2) .service-item {
     margin-top: 25px; }
 
@@ -342,6 +424,35 @@ strong {
   height: 100px;
   background: #384e63; }
 
+.soc-block {
+  width: 100%;
+  padding-top: 20px;
+  text-align: center; }
+  @media screen and (min-width: 960px) {
+    .soc-block {
+      text-align: right; } }
+  .soc-block > a {
+    width: 57px;
+    height: 57px;
+    -webkit-border-radius: 10em;
+            border-radius: 10em;
+    background: #fff;
+    text-align: center;
+    display: inline-block;
+    margin-left: 40px; }
+    .soc-block > a i {
+      font-size: 35px;
+      display: inline-block;
+      color: #384e63; }
+  .soc-block .soc_facebook i {
+    font-size: 40px;
+    display: inline-block;
+    padding-top: 8px; }
+  .soc-block .soc_youtube i {
+    font-size: 40px;
+    display: inline-block;
+    padding-top: 8px; }
+
 .error-input {
   border: 1px solid #f41e5f !important; }
 
@@ -358,7 +469,8 @@ strong {
   color: #ccc;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  text-align: center; }
+  text-align: center;
+  z-index: 200; }
   .toTop:hover {
     border: 2px solid red; }
   .toTop i {
@@ -461,6 +573,192 @@ strong {
   font-size: 24px;
   padding-bottom: 18px; }
 
+/**********MENU***********/
+#check_1 {
+  display: none; }
+
+.anz-perspective {
+  -webkit-perspective: 500px;
+  perspective: 500px;
+  z-index: 999999999; }
+
+#check_1:checked ~ .anz-perspective {
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  left: 0px; }
+
+#check_1 ~ .anz-perspective {
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  left: -310px; }
+
+#check_1:checked ~ .anz-perspective .menu-list-pressed {
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg); }
+
+#check_1 ~ .anz-perspective .menu-list-pressed {
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  -webkit-transform: rotateY(100deg);
+          transform: rotateY(100deg); }
+
+#check_1 ~ .anz-menu-ch .fa-bars {
+  display: block; }
+
+#check_1 ~ .anz-menu-ch .fa-times {
+  display: none; }
+
+#check_1:checked ~ .anz-menu-ch .fa-bars {
+  display: none; }
+
+#check_1:checked ~ .anz-menu-ch .fa-times {
+  display: block; }
+
+.anz-menu {
+  cursor: pointer; }
+
+.anz-menu-ch {
+  color: #384e63;
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  font-size: 21px;
+  z-index: 3;
+  display: none; }
+
+.anz-perspective {
+  position: fixed;
+  width: 250px;
+  height: 100%;
+  top: 0px; }
+
+.menu-list-pressed {
+  position: fixed;
+  width: 250px;
+  height: 100%;
+  top: 0px;
+  z-index: 1000;
+  color: #fff; }
+
+/*******************/
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 991px) {
+  .anz-mobile {
+    display: block; }
+  #check_1 {
+    display: none; }
+  .anz-perspective {
+    -webkit-perspective: 500px;
+    perspective: 500px;
+    background: #4b788a; }
+  #check_1:checked ~ .anz-perspective {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    left: 0px; }
+  #check_1 ~ .anz-perspective {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    left: -310px; }
+  #check_1:checked ~ .anz-perspective .menu-list-pressed {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: rotateY(0deg);
+            transform: rotateY(0deg); }
+  #check_1 ~ .anz-perspective .menu-list-pressed {
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -webkit-transform: rotateY(100deg);
+            transform: rotateY(100deg); }
+  #check_1 ~ .anz-menu-ch .fa-bars {
+    display: block; }
+  #check_1 ~ .anz-menu-ch .fa-times {
+    display: none; }
+  #check_1:checked ~ .anz-menu-ch .fa-bars {
+    display: none; }
+  #check_1:checked ~ .anz-menu-ch .fa-times {
+    display: block; }
+  .anz-menu-ch {
+    color: #384e63;
+    cursor: pointer;
+    position: fixed;
+    right: 20px;
+    top: 17px;
+    font-size: 30px;
+    z-index: 3000; }
+  .anz-perspective {
+    position: fixed;
+    width: 300px;
+    height: 100%;
+    top: 0px;
+    background: #4b788a; }
+  .menu-list-pressed {
+    width: 300px;
+    height: 100%;
+    top: 0px;
+    z-index: 1000;
+    color: #fff;
+    background: #4b788a; } }
+
+/*******************/
+/* Icon 1 */
+#nav-icon {
+  width: 35px;
+  height: 15px;
+  position: relative;
+  margin-top: 25px;
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer; }
+
+#nav-icon span {
+  display: block;
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  background: #384e63;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  transition: .25s ease-in-out; }
+
+#nav-icon span:nth-child(1) {
+  top: 0px; }
+
+#nav-icon span:nth-child(2), #nav-icon span:nth-child(3) {
+  top: 10px; }
+
+#nav-icon span:nth-child(4) {
+  top: 20px; }
+
+#nav-icon.open span:nth-child(1) {
+  top: 16px;
+  width: 0%;
+  left: 50%; }
+
+#nav-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+      transform: rotate(45deg); }
+
+#nav-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+
+#nav-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%; }
+
 .mobile-menu {
   display: block;
   width: 100%; }
@@ -480,5 +778,5 @@ strong {
       color: #fff;
       font-size: 14px; }
       .mobile-menu li a:hover {
-        background: red;
-        color: #fff; }
+        background: #fff;
+        color: #4b788a; }
