--- a/css/style.scss
+++ b/css/style.scss
@@ -94,6 +94,9 @@ strong{
 .main-menu{
 	width: 100%;
 	text-align: right;
+	@media screen and (max-width: 1015px) {
+		display: none;
+	}
 	@media screen and (min-width: 960px) {
 		padding-top: 63px;
 	}
@@ -101,10 +104,22 @@ strong{
 		display: inline-block;
 		//margin-left: 24px;
 		margin-right: 54px;
+		@media screen and (min-width: 700px) {
+			margin-right: 30px;
+		}
+		@media screen and (min-width: 1200px) {
+			margin-right: 54px;
+		}
 		a{
 			color: #384f63;
 			font-size: 24px;
 			letter-spacing: 0.05em;
+			@media screen and (min-width: 700px) {
+				font-size: 20px;
+			}
+			@media screen and (min-width: 1200px) {
+				font-size: 24px;
+			}
 
 		}
 		&:last-child{
@@ -113,50 +128,106 @@ strong{
 		}
 	}
 }
+.logo-box{
+	img{
+		@media screen and (max-width: 1015px) {
+			max-width: 97px;
+		}
+	}
+}
 .header{
 	width: 100%;
-	height: 276px;
+	height: 135px;
 	padding-top: 20px;
-	background: red;
-	background: url(../img/header.png) no-repeat top center;
+	background: #fff;
+	
 	z-index: 50;
 	position: relative;
+	@media screen and (min-width: 1015px) {
+		height: 276px;
+		background: url(../img/header.png) no-repeat top center;
+	}
+}
+.header_fided{
+	top: 0px;
+	position: fixed;
+	width: 100%;
+	height: 100px;
+	z-index: 500;
+	//padding: 25px 0;
+	
+	@media screen and (max-width: 1015px) {
+		box-shadow: 0px 0px 4px 1px #CCC;
+	}
+	@media screen and (min-width: 1015px) {
+		height: 276px;
+		background: url(../img/header.png) no-repeat top center;
+	}
+	.logo-box{
+		margin-top: -15px;
+	}
+	.main-menu{
+		margin-top: -25px;
+	}
 }
 
 .header-block{
 	background: url(../img/header2.png) no-repeat top center;
-	min-height: 1035px;
-	padding-top: 250px;
+	
+	padding-top: 25px;
+	padding-bottom: 25px;
 	text-align: center;
 	z-index: 40;
-	margin-top: -150px;
+	
 	opacity: 0.99;
 	position: relative;
+	@media screen and (min-width: 1015px) {
+		padding-top: 250px;
+		margin-top: -150px;
+		min-height: 1035px;
+	}
 	h1.header-block_h1{
-		font-size: 60px;
+		font-size: 40px;
+		line-height: 42px;
 		letter-spacing: 0.05;
 		color: #fff;
 		font-weight: 900;
-		line-height: 70px;
+		
+		@media screen and (min-width: 1015px) {
+			font-size: 60px;
+			line-height: 70px;
+		}
 	}
 }
 .features-block{
 	width: 100%;
-	min-height: 1050px;
+	
 	background: url(../img/features_bg.png) no-repeat top center;
-	margin-top: -220px;
-	padding-top: 300px;
+	
+	
 	text-align: center;
 	z-index: 30;
 	color: #374f63;
-	padding-bottom: 150px;
+	padding-top: 30px;
+	
+	@media screen and (min-width: 1015px) {
+		padding-bottom: 150px;
+		min-height: 1050px;
+		margin-top: -220px;
+		padding-top: 300px;
+	}
 	&__title{
 		display: block;
-		font-size: 48px;
+		font-size: 35px;
+		line-height: 37px;
 		text-transform: uppercase;
 		letter-spacing: 0.025em;
 		font-weight: 700;
-		margin-bottom: 35px;
+		margin-bottom: 25px;
+		@media screen and (min-width: 1015px) {
+			font-size: 48px;
+			margin-bottom: 35px;
+		}
 	}
 	&__description{
 		font-size: 18px;
@@ -166,15 +237,24 @@ strong{
 		max-width: 850px;
 		margin: 0 auto;
 		margin-bottom: 70px;
+		text-align: left;
+		@media screen and (min-width: 1015px) {
+			text-align: center;
+		}
 	}
 	.col-lg-4:nth-child(even){
 		div.feature-item{
-			margin-top: -80px;
+			@media screen and (min-width: 1015px) {
+				margin-top: -80px;
+			}
+			
 		}
 	}
 	.feature-item{
 		width: 100%;
 		max-width: 367px;
+		margin: 0 auto;
+		margin-bottom: 35px;
 		&__imgbox{
 			margin-bottom: 35px;
 		}
@@ -198,21 +278,35 @@ strong{
 }
 .we-offer{
 	width: 100%;
-	min-height: 790px;
-	background: url(../img/we_offer.png) no-repeat top center;
-	margin-top: -220px;
-	padding-top: 300px;
-	text-align: center;
+	
+	
+	//margin-top: -220px;
+	padding-top: 30px;
+	
+	
 	z-index: 30;
 	position: relative;
 	color: #374f63;
+	@media screen and (min-width: 1015px) {
+		margin-top: -220px;
+		padding-top: 300px;
+		min-height: 790px;
+		background: url(../img/we_offer.png) no-repeat top center;
+
+	}
 	&__title{
 		display: block;
-		font-size: 48px;
+		font-size: 35px;
+		line-height: 37px;
 		text-transform: uppercase;
 		letter-spacing: 0.025em;
 		font-weight: 700;
 		margin-bottom: 35px;
+		text-align: center;
+		@media screen and (min-width: 1015px) {
+			font-size: 48px;
+			
+		}
 	}
 	&__description{
 		font-size: 18px;
@@ -222,17 +316,33 @@ strong{
 		max-width: 850px;
 		margin: 0 auto;
 		margin-bottom: 70px;
+		
+		@media screen and (min-width: 1015px) {
+			text-align: center;
+
+		}
 	}
 }
 .home-service{
 	position: relative;
 	width: 100%;
-	min-height: 688px;
+	
 	background: url(../img/home_service.png) no-repeat top center;
-	margin-top: -220px;
-	padding-top: 250px;
+
+	
 	text-align: center;
 	z-index: 20;
+	@media screen and (max-width: 1015px) {
+		background-size: cover;
+		padding-top: 30px;
+		padding-bottom: 210px;
+	}
+	@media screen and (min-width: 1015px) {
+		min-height: 688px;
+		margin-top: -220px;
+		padding-top: 250px;
+
+	}
 	.service-item{
 		color: #fff;
 		font-size: 26px;
@@ -243,7 +353,10 @@ strong{
 	}
 	.col-lg-3:first-child{
 		.service-item{
-			margin-top: -100px;
+			
+			@media screen and (min-width: 1015px) {
+				margin-top: -100px;
+			}
 		}
 	}
 	.col-lg-3:nth-child(2){
@@ -402,6 +515,44 @@ strong{
 	height: 100px;
 	background: #384e63;
 }
+.soc-block{
+	width: 100%;
+	padding-top: 20px;
+	text-align: center;
+	@media screen and (min-width: 960px) {
+		text-align: right;
+	}
+	> a{
+
+		width: 57px;
+		height: 57px;
+		border-radius: 10em;
+		background: #fff;
+		text-align: center;
+		display: inline-block;
+		margin-left: 40px;
+		i{
+			font-size: 35px;
+			display: inline-block;
+			color: #384e63;
+		}
+
+	}
+	.soc_facebook{
+		i{
+			font-size: 40px;
+			display: inline-block;
+			padding-top: 8px;
+		}
+	}
+	.soc_youtube{
+		i{
+			font-size: 40px;
+			display: inline-block;
+			padding-top: 8px;
+		}
+	}
+}
 .error-input{
 	border: 1px solid #f41e5f !important;
 }
@@ -418,7 +569,7 @@ strong{
 	color: #ccc;
 	border-radius: 3px;
 	text-align: center;
-
+	z-index: 200;
 	&:hover{
 		border: 2px solid red;
 	}
@@ -540,6 +691,250 @@ strong{
   font-size: 24px;
   padding-bottom: 18px; }
 
+/**********MENU***********/
+#check_1{
+    display: none;
+}
+.anz-perspective{
+    -webkit-perspective: 500px; 
+    perspective: 500px;
+    z-index: 999999999;
+
+}
+.menu-list-pressed{
+    
+}
+#check_1:checked ~ .anz-perspective{
+    transition: all 1s ease-in-out;
+    left: 0px;
+}
+#check_1 ~ .anz-perspective{
+    transition: all 1s ease-in-out;
+    left: -310px;
+}
+
+#check_1:checked ~ .anz-perspective .menu-list-pressed{
+    transition: all 1s ease-in-out;
+    transform: rotateY(0deg);
+}
+#check_1 ~ .anz-perspective .menu-list-pressed{
+    transition: all 1s ease-in-out;
+    transform: rotateY(100deg);
+}
+
+#check_1 ~ .anz-menu-ch .fa-bars{
+    display: block;
+}
+#check_1 ~ .anz-menu-ch .fa-times{
+    display: none;
+}
+#check_1:checked ~ .anz-menu-ch .fa-bars{
+    display: none;
+}
+#check_1:checked ~ .anz-menu-ch .fa-times{
+    display: block;
+}
+.menu-list-pressed {
+    //position: fixed;
+    //padding: 40px 50px;
+    
+}
+.anz-menu{
+   	cursor: pointer;
+    //font-size: 28px;
+}
+
+.anz-menu-ch{
+    color: #384e63;   
+    cursor: pointer; 
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    font-size: 21px;
+    z-index: 3;
+    display: none;
+}
+
+.anz-perspective{
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    top: 0px;
+}
+
+.menu-list-pressed {
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    top: 0px;
+    z-index: 1000;
+    color: #fff;
+}
+
+/*******************/
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 991px) {
+   
+   
+    .anz-mobile{
+        display: block;
+    }
+
+   
+    
+
+    #check_1{
+        display: none;
+    }
+    .anz-perspective{
+        -webkit-perspective: 500px; 
+        perspective: 500px;
+        background: #4b788a;
+
+    }
+    
+    #check_1:checked ~ .anz-perspective{
+        transition: all 1s ease-in-out;
+        left: 0px;
+    }
+    #check_1 ~ .anz-perspective{
+        transition: all 1s ease-in-out;
+        left: -310px;
+    }
+
+    #check_1:checked ~ .anz-perspective .menu-list-pressed{
+        transition: all 1s ease-in-out;
+        transform: rotateY(0deg);
+    }
+    #check_1 ~ .anz-perspective .menu-list-pressed{
+        transition: all 1s ease-in-out;
+        transform: rotateY(100deg);
+    }
+
+    #check_1 ~ .anz-menu-ch .fa-bars{
+        display: block;
+    }
+    #check_1 ~ .anz-menu-ch .fa-times{
+        display: none;
+    }
+    #check_1:checked ~ .anz-menu-ch .fa-bars{
+        display: none;
+    }
+    #check_1:checked ~ .anz-menu-ch .fa-times{
+        display: block;
+    }
+    
+
+    .anz-menu-ch{
+        color: #384e63;   
+        cursor: pointer; 
+       	position: fixed;
+        right: 20px;
+        top: 17px;
+        font-size: 30px;
+        z-index: 3000;
+    }
+  
+    .anz-perspective{
+        position: fixed;
+        width: 300px;
+        height: 100%;
+        top: 0px;
+        background: #4b788a;
+    }
+
+    .menu-list-pressed {
+        width: 300px;
+        height: 100%;
+        top: 0px;
+        z-index: 1000;
+        color: #fff;
+        background: #4b788a;
+       // overflow: scroll;
+    }
+    
+
+}
+
+
+/*******************/
+/* Icon 1 */
+
+#nav-icon{
+  width: 35px;
+  height: 15px;
+  position: relative;
+  margin-top: 25px;
+  //margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon span{
+  display: block;
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  background: #384e63;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+
+
+#nav-icon span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
+  top: 10px;
+}
+
+#nav-icon span:nth-child(4) {
+  top: 20px;
+}
+
+#nav-icon.open span:nth-child(1) {
+  top: 16px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
 
 .mobile-menu{
 	display: block;
@@ -564,11 +959,12 @@ strong{
 			color: #fff;
 			font-size: 14px;
 			&:hover{
-				background: red;
-				color: #fff;
+				background: #fff;
+				color: #4b788a;
 			}
 		}
 	}
 }
+
 @media only screen and (min-width: 960) {
 }
