--- a/index.pug
+++ b/index.pug
@@ -1,6 +1,7 @@
 extends layout.pug
+block vars
+	- var title = 'Главная';
 block header
-	- var title ="Главная";
 	include includes/header.pug
 block content
 	include includes/content-home.pug
