--- a/news.pug
+++ b/news.pug
@@ -1,6 +1,7 @@
 extends layout.pug
-block header
+block vars
 	- var title ="Новости";
+block header
 	include includes/header.pug
 block content
 	include includes/content-news.pug
