--- a/photo.pug
+++ b/photo.pug
@@ -1,6 +1,7 @@
 extends layout.pug
-block header
+block vars
     - var title ="Фотоархив";
+block header
     include includes/header.pug
 block content
     include includes/content-photo.pug
