--- a/price.pug
+++ b/price.pug
@@ -1,8 +1,9 @@
 extends layout.pug
+block vars
+	- var title ="Прайс";
 block header
-    - var title ="Прайс";
-    include includes/header.pug
+	include includes/header.pug
 block content
-    include includes/content-price.pug
+	include includes/content-price.pug
 block footer
-    include includes/footer.pug
+	include includes/footer.pug
